Colaboratory를 통해 생성됨

--- a/21511박시우_제출과제1.ipynb
+++ b/21511박시우_제출과제1.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "21511박시우_제출과제1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM74TZ0GBjorDg5eguS+Hxn",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOAndSbXN38NGzfOpx0g0ga",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,12 +54,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yOtj-y4s5sor",
-        "outputId": "c5e8ac7e-76c2-45c2-b378-6bb5ba8edfae"
+        "outputId": "c2b915ae-23fd-4512-8428-9a3e022c84de"
       },
       "source": [
         "a+b"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -70,9 +71,20 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f5lipuFw_nnJ"
+      },
+      "source": [
+        "안녕하세요 열공하세요"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
