Colaboratory를 통해 생성됨

--- a/21511박시우_제출과제1.ipynb
+++ b/21511박시우_제출과제1.ipynb
@@ -6,7 +6,7 @@
       "name": "21511박시우_제출과제1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOAndSbXN38NGzfOpx0g0ga",
+      "authorship_tag": "ABX9TyNtJtC2TcsCbitPXsGrhOeh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,7 @@
         "id": "f5lipuFw_nnJ"
       },
       "source": [
-        "안녕하세요 열공하세요"
+        "printf(\"안녕하세요 열공하세요\")"
       ],
       "execution_count": null,
       "outputs": []
