--- a/3주차수업.ipynb
+++ b/3주차수업.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "3주차수업.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNM2kddmhMN85CdjQTImKZ+",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNFiP2BrXto5GAHksjuh5jD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,240 +34,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "pwbI-HnN4wFx",
-        "outputId": "65a24c29-d188-434c-9e55-5e27db8f2949"
-      },
-      "source": [
-        "names=['정밀','폴리','산설','메카','로봇','전기']\n",
-        "\n",
-        "names.append('부산기계')\n",
-        "\n",
-        "for name in names:\n",
-        "  if len(name)>2:\n",
-        "    print(name,'공업고등학교')\n",
-        "    print(name+'공업고등학교')\n"
-      ],
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "부산기계 공업고등학교\n",
-            "부산기계공업고등학교\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PX-M4gBi5Qu6",
-        "outputId": "2e9dc2fb-1baf-4bba-9c76-48f5043ba6c7"
-      },
-      "source": [
-        "print(20**3)\n",
-        "\n",
-        "print('Fdsadfasdf')"
-      ],
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "8000\n",
-            "Fdsadfasdf\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wxg9U6Fo5VhZ",
-        "outputId": "731e064b-6758-48e6-9857-00f1d6795db4"
-      },
-      "source": [
-        "school='부기공'\n",
-        "print(school)\n",
-        "\n",
-        "a=123\n",
-        "print(a)\n",
-        "\n",
-        "name=\"전기과\"\n",
-        "print(name+)"
-      ],
-      "execution_count": 47,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "부기공\n",
-            "123\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9Xzq2AO77R7Y",
-        "outputId": "5b089e16-c130-4a3c-ab90-5a26ee7b116c"
-      },
-      "source": [
-        "print(10*20)\n",
-        "print(10**2)\n",
-        "print(10%3)\n",
-        "print(7/2)\n",
-        "print(7//2)"
-      ],
-      "execution_count": 48,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "200\n",
-            "100\n",
-            "1\n",
-            "3.5\n",
-            "3\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DD_wwqwj9HY5",
-        "outputId": "6c109d20-fe48-4798-c512-6527f94c4717"
-      },
-      "source": [
-        "print( not 10<=2)"
-      ],
-      "execution_count": 54,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "True\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_Njmpd8690MY",
-        "outputId": "9685f341-833d-4c1e-b822-c0c33258641c"
-      },
-      "source": [
-        "print( 10<=10) \n"
-      ],
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "True\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "dsoHSy8--BSY",
-        "outputId": "0eca583e-910a-4594-8bfe-18d195fd8333"
-      },
-      "source": [
-        "print(10!=2)"
-      ],
-      "execution_count": 60,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "True\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Il-IBGl2-RO3",
-        "outputId": "143e5d6a-c7a1-415f-be63-52446eb75fca"
-      },
-      "source": [
-        "print((10%2)==(1-1))"
-      ],
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "True\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wMBY4F0p_Vo4",
-        "outputId": "1790397d-876a-4298-d955-4f5cfa3d2dcf"
+        "id": "2jM5hqs_J8r6",
+        "outputId": "9f939462-c2a9-407e-d3ca-cadd39bac77b"
       },
       "source": [
         "from random import randint\n",
         "\n",
-        "dice =randint(1, 6)\n",
+        "dice = random.randint(1,6)\n",
         "\n",
-        "dice"
+        "print(dice)"
       ],
-      "execution_count": 101,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 101
+          "output_type": "stream",
+          "text": [
+            "4\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -276,27 +61,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "zPS8SlA2_2Po",
-        "outputId": "b1b5ff4b-5dd8-40ea-8450-8d0ac1e6b101"
+        "id": "R8_7x6inMR4j",
+        "outputId": "567286ff-2c95-41de-bbe5-286c87c1a212"
       },
       "source": [
         "import math\n",
         "\n",
-        "math.sin(3.14/6)"
+        "math.sin(math.pi / 6)"
       ],
-      "execution_count": 119,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.4997701026431024"
+              "0.49999999999999994"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 119
+          "execution_count": 15
         }
       ]
     },
@@ -306,36 +91,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "uwCu3KWBCBoI",
-        "outputId": "dabbbc6d-92d8-49de-a722-79895a1ea40f"
+        "id": "HwxzxTu_Ylbr",
+        "outputId": "ad89815a-a1d4-483b-a181-df754a3a9caf"
       },
       "source": [
-        "a='박시우dfgssssssssss'\n",
+        "name = '부산기계공고'\n",
         "\n",
-        "for i in a:\n",
-        "  print(i)"
+        "for i in name:\n",
+        "  print(i)\n",
+        "  "
       ],
-      "execution_count": 135,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "박\n",
-            "시\n",
-            "우\n",
-            "d\n",
-            "f\n",
-            "g\n",
-            "s\n",
-            "s\n",
-            "s\n",
-            "s\n",
-            "s\n",
-            "s\n",
-            "s\n",
-            "s\n",
-            "s\n",
-            "s\n"
+            "부\n",
+            "산\n",
+            "기\n",
+            "계\n",
+            "공\n",
+            "고\n"
           ],
           "name": "stdout"
         }
@@ -347,23 +123,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "5SurCJE7D_jo",
-        "outputId": "144c4328-16f4-4d07-a4ef-9a94b58b0c23"
+        "id": "q-qcOH4yaODf",
+        "outputId": "a65b235b-2429-4983-94ef-b0a009adace4"
       },
       "source": [
-        "for i in [1,2,3,4,5]:\n",
-        "  print(i+123)"
+        "for i in name:\n",
+        "  print(i, end='')"
       ],
-      "execution_count": 138,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "124\n",
-            "125\n",
-            "126\n",
-            "127\n",
-            "128\n"
+            "부산기계공고"
           ],
           "name": "stdout"
         }
@@ -375,30 +147,55 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "aW8nLnapFAUw",
-        "outputId": "fe3e3016-96d3-4fc5-e21c-0d8345de9dd4"
+        "id": "D6tNBMGcap5f",
+        "outputId": "c5e8572a-dace-4b9f-bddb-6703cdbbd741"
       },
       "source": [
-        "range (10)\n",
-        "\n",
+        "for i in [0, 1, 2, 3]:\n",
+        "  print(f'{i}의 제곱근 : {i**2}')"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0의 제곱근 : 0\n",
+            "1의 제곱근 : 1\n",
+            "2의 제곱근 : 4\n",
+            "3의 제곱근 : 9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QX40NOtebREO",
+        "outputId": "1777ce43-b1e8-4153-d25b-a7991d62e8b2"
+      },
+      "source": [
         "for i in range(10):\n",
-        "  print (f'{i}제곱값= {i**2}')"
+        "  print(f'{i}의 제곱근 : {i**2}')"
       ],
-      "execution_count": 144,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0제곱값= 0\n",
-            "1제곱값= 1\n",
-            "2제곱값= 4\n",
-            "3제곱값= 9\n",
-            "4제곱값= 16\n",
-            "5제곱값= 25\n",
-            "6제곱값= 36\n",
-            "7제곱값= 49\n",
-            "8제곱값= 64\n",
-            "9제곱값= 81\n"
+            "0의 제곱근 : 0\n",
+            "1의 제곱근 : 1\n",
+            "2의 제곱근 : 4\n",
+            "3의 제곱근 : 9\n",
+            "4의 제곱근 : 16\n",
+            "5의 제곱근 : 25\n",
+            "6의 제곱근 : 36\n",
+            "7의 제곱근 : 49\n",
+            "8의 제곱근 : 64\n",
+            "9의 제곱근 : 81\n"
           ],
           "name": "stdout"
         }
@@ -410,60 +207,234 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "_O_B1RaJFXoH",
-        "outputId": "86096d4c-e1b0-4408-ed74-fd57a0c313c3"
+        "id": "f8zBwLG0b5hP",
+        "outputId": "ddd325c2-4c25-4590-e142-ccac649fc353"
       },
       "source": [
-        "for _ in range(5):\n",
-        "  print(\"전기과화이;팅~~~~~~~~~~~~\") "
+        "type(range(10))"
       ],
-      "execution_count": 145,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "전기과화이;팅~~~~~~~~~~~~\n",
-            "전기과화이;팅~~~~~~~~~~~~\n",
-            "전기과화이;팅~~~~~~~~~~~~\n",
-            "전기과화이;팅~~~~~~~~~~~~\n",
-            "전기과화이;팅~~~~~~~~~~~~\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Yg5ZQJEDGHzc",
-        "outputId": "49840125-315f-4c33-ae99-0d50d4770393"
-      },
-      "source": [
-        "range(5)"
-      ],
-      "execution_count": 146,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "range(0, 5)"
+              "range"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 146
+          "execution_count": 29
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UTU_lfh_GMe2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B4_wyJIUcadu",
+        "outputId": "6e96c641-82f0-4e0c-e7f1-a95c519929de"
+      },
+      "source": [
+        "for i in range(1,-10,-1):\n",
+        "  print(i**2)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "0\n",
+            "1\n",
+            "4\n",
+            "9\n",
+            "16\n",
+            "25\n",
+            "36\n",
+            "49\n",
+            "64\n",
+            "81\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9rdmFbAcc8KP",
+        "outputId": "fdec2021-83ef-4cff-f5ae-9d91271266c5"
+      },
+      "source": [
+        "if 10 > 0:\n",
+        "  print('안녕하세요')"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "안녕하세요\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rBu7mR1Adju-",
+        "outputId": "b009141f-acee-48d9-bef2-c607ef8642c4"
+      },
+      "source": [
+        "for _ in range(3):\n",
+        "  print('전기과 화이팅!!!')"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "전기과 화이팅!!!\n",
+            "전기과 화이팅!!!\n",
+            "전기과 화이팅!!!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EIQgByezdsl-",
+        "outputId": "5fc65102-fe06-4d4b-f548-de0b4202a5c1"
+      },
+      "source": [
+        "if 10 != 0 and 5 % 2 == 1:\n",
+        "  print('안녕하세요')"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "안녕하세요\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c5qF9KtqeHNe",
+        "outputId": "0e9f5318-1c8a-4b81-abdc-5c710dfb98d2"
+      },
+      "source": [
+        "passwd = int(input('비밀번호 4자리 숫자 입력 : '))\n",
+        "\n",
+        "if passwd == 2021:\n",
+        "  print('비밀번호가 일치')\n",
+        "elif passwd == 2020:\n",
+        "  print('이 숫자에 한 개만 더해주세요.')\n",
+        "else : \n",
+        "  print('다시 시작 해주세요')"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "비밀번호 4자리 숫자 입력 : 2020\n",
+            "이 숫자에 한 개만 더해주세요.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MV5fxzH5eZiu",
+        "outputId": "38e391bd-2cca-40d3-9d81-67c8a2c429cd"
+      },
+      "source": [
+        "for i in range(1,100000):\n",
+        "  if i == 2020:\n",
+        "    print('비밀번호가 일치')\n",
+        "    print(f'비밀번호는 {i}입니다.')"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "비밀번호가 일치\n",
+            "비밀번호는 2020입니다.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ciERNeslfV-k",
+        "outputId": "ec3c9133-327b-4dc8-c917-0c2e35401bc3"
+      },
+      "source": [
+        "print('[ 소름끼치도록 놀라운 심리테스트 ]')\n",
+        "\n",
+        "menu = input('당신이 좋아하는 과일을 입력해주세요 : ')\n",
+        "\n",
+        "if menu == '사과':\n",
+        "  print(f'당신은 {menu}을 좋아하는 사람입니다.')\n",
+        "elif menu == '바나나':\n",
+        "  print(f'당신은 {menu}을 좋아하는 사람입니다.')\n",
+        "elif menu == '멜론':\n",
+        "  print(f'당신은 {menu}을 좋아하는 사람입니다.')\n",
+        "else :\n",
+        "  print(f'당신은 사과, 바나나, 멜론을 좋아하지 않는 사람입니다.')"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 소름끼치도록 놀라운 심리테스트 ]\n",
+            "당신이 좋아하는 과일을 입력해주세요 : 멜론\n",
+            "당신은 멜론을 좋아하는 사람입니다.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_Qfh2L2GgmW1"
       },
       "source": [
         ""
